--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 documents/Cuarto/Primer Cuatrimestre/IG/Prácticas/Primera_Entrega-v1/p3.zip
+documents/Cuarto/Primer Cuatrimestre/IG/Prácticas/Segunda_Entrega-v1/p3.zip
