--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,4 @@ documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/Ejercicio_Grafana/Grafana_
 documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/progra/grafana_data/png/
 documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/progra/grafana_data/alerting/
 documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/progra/grafana_data/csv/
-documents/Primero/Primer Cuatrimestre/FFT/Teoría/Libro/Libro completo/FFT1_FFT2_FFT3_merged.pdf
-documents/Primero/Primer Cuatrimestre/FFT/Teoría/Libro/Libro completo/Fundamentos\ Físicos\ y\ Tecnológicos\ Parte I\ (OCR).pdf
+documents/Primero/Primer Cuatrimestre/FFT/Teoría/Libro/Libro completo/
